# HR-Pulse-Backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci-cd.yml
ml_models/: best_salary_model.pkl
ml_models_saved/: best_salary_model.pkl
notebooks/: eda.ipynb
src/ai/ml/: model_training.py  preprocessing.py
src/ai/ner/: get_client.py  ner_extraction.py
src/ai_ner/: ner_extraction.py
src/api/: dependencies.py  main.py
src/api/crud/: jobs_crud.py  user_crud.py
src/api/routers/: auth.py  jobs.py  predict.py  profil.py
src/api/schemas/: job_schema.py  predict_schema.py  user_schema.py
src/api/services/: ml_service.py
src/api/utils/: get_model.py
src/core/: config.py  security.py  tracing.py
src/data_engineering/: data_cleaning.py  features_eng.py  ingest_dbAzure.py  ingestion.py  run_pipeline.py
src/data_engineering /: data_cleaning.py  ingestion.py
src/data_pipeline/: data_cleaning.py  features_eng.py  ingestion.py  test.py
src/database/: session.py
src/database/models/: jobskills.py  users.py
src/ml/: model_training.py  preprocessing.py
terraform/: main.tf
tests/: conftest.py  test_cleaner.py  test_ingestiondb.py  test_juryblanc.py
