[project]
name = "hr-pulse-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-ai-textanalytics>=5.3.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "python-dotenv>=1.2.1",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]
